# Test_Agilex

./: README.md
example_data/: gms_log_20230617_023714.csv  gms_log_20230619_004957.csv  gms_log_20230619_184246.csv  gms_log_20230622_012013.csv  gps_log_20230617_023714.csv  gps_log_20230619_004957.csv  gps_log_20230619_184246.csv  gps_log_20230622_012013.csv  imu_log_20230617_023714.csv  imu_log_20230619_184246.csv  imu_log_20230622_012013.csv
scripts/: log.py  read_log.py
src/odom_publish/: CMakeLists.txt  README.md  package.xml
src/odom_publish/launch/: scout_publish_transform.launch
src/odom_publish/scripts/: scout_publish_transform.py
src/pozyx_uwb/: CMakeLists.txt  package.xml
src/ugv_sim/scout/scout_description/urdf/: scout_v2.xacro
src/ugv_sim/scout/scout_gazebo_sim/: CMakeLists.txt
src/ugv_sim/scout/scout_gazebo_sim/launch/: scout_empty_world.launch
src/ugv_sim/scout/scout_gazebo_sim/src/: uwb_simulation.py
src/ugv_sim/scout/scout_gazebo_sim/worlds/: weston_robot_empty.world
src/ugv_sim/scout/scout_navigation/: CMakeLists.txt  LQR_control.tex  package.xml
src/ugv_sim/scout/scout_navigation/launch/: gps_nav.launch  gps_nav_lqr_map_viz.launch  gps_nav_map_viz.launch
src/ugv_sim/scout/scout_navigation/routes/: trajectory.csv
src/ugv_sim/scout/scout_navigation/src/: diff_pure_pursuit.cpp  diff_pure_pursuit.h  lqr_control.cpp  lqr_control.h  pid_pure_pursuit.cpp  pid_pure_pursuit.h
