<?xml version="1.0"?>
<package>
  <name>pozyx_uwb</name>
  <version>0.0.1</version>
  <description>The pozyx_simulation package</description>
  <maintainer email="bekirbostanci@gmail.com">Bostanci2	</maintainer>
  <license>BSD</license>
  <author email="bekirbostanci@gmail.com">Bekir Bostanci</author>
  
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
